--- a/pom.xml
+++ b/pom.xml
@@ -32,13 +32,12 @@
     <java.version>1.7</java.version>
     <android.version>4.1.1.4</android.version>
     <android.platform>16</android.platform>
-    <robin.version>1.0.0</robin.version>
     <butterknife.version>6.0.0</butterknife.version>
     <junit.version>4.12</junit.version>
     <robolectric.version>3.0</robolectric.version>
     <assertj.version>1.7.0</assertj.version>
     <rxjava.version>1.0.14</rxjava.version>
-    <rxjava.android.version>0.22.0</rxjava.android.version>
+    <rxjava.android.version>1.0.1</rxjava.android.version>
   </properties>
 
   <scm>
@@ -69,11 +68,6 @@
         <version>${android.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.f2prateek.robin</groupId>
-        <artifactId>robin</artifactId>
-        <version>${robin.version}</version>
-      </dependency>
-      <dependency>
         <groupId>com.jakewharton</groupId>
         <artifactId>butterknife</artifactId>
         <version>${butterknife.version}</version>
@@ -102,6 +96,7 @@
         <groupId>io.reactivex</groupId>
         <artifactId>rxandroid</artifactId>
         <version>${rxjava.android.version}</version>
+        <type>aar</type>
       </dependency>
     </dependencies>
   </dependencyManagement>
