--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ ext {
 }
 
 ext.deps = [
+    annotations: 'com.android.support:support-annotations:23.0.0',
     rxjava: 'io.reactivex:rxjava:1.0.14',
     rxandroid: 'io.reactivex:rxandroid:1.0.1',
     butterknife: 'com.jakewharton:butterknife:6.1.0',
