--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.f2prateek.rx.preferences
-VERSION_NAME=1.0.0
+VERSION_NAME=1.0.1-SNAPSHOT
 
 POM_DESCRIPTION=Reactive SharedPreferences for Android
 
