--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ ext.deps = [
     annotations: 'com.android.support:support-annotations:23.0.0',
     rxjava: 'io.reactivex:rxjava:1.0.14',
     rxandroid: 'io.reactivex:rxandroid:1.0.1',
+    rxbinding: 'com.jakewharton.rxbinding:rxbinding:0.2.0',
     butterknife: 'com.jakewharton:butterknife:6.1.0',
     junit: 'junit:junit:4.12',
     assertj: 'org.assertj:assertj-core:1.7.0',
