--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,10 @@
-buildscript {
-  repositories {
-    mavenCentral()
+subprojects {
+  buildscript {
+    repositories {
+      mavenCentral()
+    }
   }
-  dependencies {
-    classpath 'com.android.tools.build:gradle:1.3.1'
-  }
-}
 
-allprojects {
   repositories {
     mavenCentral()
   }
@@ -17,10 +14,16 @@ allprojects {
 }
 
 ext {
+  androidPlugin = 'com.android.tools.build:gradle:1.3.1'
+
   minSdkVersion = 9
   targetSdkVersion = 23
   compileSdkVersion = 23
   buildToolsVersion = '23.0.1'
+
+  kotlinPlugin = 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.0-beta-1038'
+  kotlinStdlib = 'org.jetbrains.kotlin:kotlin-stdlib:1.0.0-beta-1038'
+
   javaVersion = JavaVersion.VERSION_1_7
 }
 
