--- a/rx-preferences/src/main/AndroidManifest.xml
+++ b/rx-preferences/src/main/AndroidManifest.xml
@@ -1,3 +1,1 @@
-<manifest package="com.f2prateek.rx.preferences">
-  <application/>
-</manifest>
+<manifest package="com.f2prateek.rx.preferences"/>
