--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.3.1'
+    classpath 'com.android.tools.build:gradle:2.2.0'
   }
 }
 
@@ -32,5 +32,5 @@ ext.deps = [
     butterknife: 'com.jakewharton:butterknife:7.0.1',
     junit: 'junit:junit:4.12',
     assertj: 'org.assertj:assertj-core:1.7.0',
-    robolectric: 'org.robolectric:robolectric:3.0',
+    robolectric: 'org.robolectric:robolectric:3.0'
 ]
