Migrate to RxJava 2.x

--- a/rx-preferences-sample/build.gradle
+++ b/rx-preferences-sample/build.gradle
@@ -22,11 +22,16 @@ android {
     textOutput 'stdout'
     ignoreWarnings true
   }
+
+  packagingOptions {
+    exclude 'META-INF/rxjava.properties' // rxjava-2.0.0-RC3.jar & rxjava-1.2.0.jar
+  }
 }
 
 dependencies {
   compile project(':rx-preferences')
   compile deps.rxandroid
   compile deps.rxbinding
+  compile deps.rxjava2interop
   compile deps.butterknife
 }
