--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,10 @@ ext {
 
 ext.deps = [
     annotations: 'com.android.support:support-annotations:23.1.1',
-    rxjava: 'io.reactivex:rxjava:1.1.0',
-    rxandroid: 'io.reactivex:rxandroid:1.1.0',
+    rxjava: 'io.reactivex.rxjava2:rxjava:2.0.0-RC3',
+    rxandroid: 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1',
     rxbinding: 'com.jakewharton.rxbinding:rxbinding:0.3.0',
+    rxjava2interop: 'com.github.akarnokd:rxjava2-interop:0.4.0',
     butterknife: 'com.jakewharton:butterknife:7.0.1',
     junit: 'junit:junit:4.12',
     assertj: 'org.assertj:assertj-core:1.7.0',
