--- a/rx-preferences/src/main/AndroidManifest.xml
+++ b/rx-preferences/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
-<manifest package="com.f2prateek.rx.preferences">
+<manifest package="com.f2prateek.rx.preferences2">
   <application/>
 </manifest>
