--- a/rx-preferences-sample/build.gradle
+++ b/rx-preferences-sample/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
   compileSdkVersion rootProject.ext.compileSdkVersion
   buildToolsVersion rootProject.ext.buildToolsVersion
 
   compileOptions {
-    sourceCompatibility rootProject.ext.javaVersion
-    targetCompatibility rootProject.ext.javaVersion
+    sourceCompatibility rootProject.ext.java8Version
+    targetCompatibility rootProject.ext.java8Version
   }
 
   defaultConfig {
