--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:2.2.0'
+    classpath 'me.tatarka:gradle-retrolambda:3.3.0'
   }
 }
 
@@ -24,6 +25,7 @@ ext {
   compileSdkVersion = 24
   buildToolsVersion = '23.0.3'
   javaVersion = JavaVersion.VERSION_1_7
+  java8Version = JavaVersion.VERSION_1_8
 }
 
 ext.deps = [
