--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.3.1'
+    classpath 'com.android.tools.build:gradle:2.2.0'
+    classpath 'me.tatarka:gradle-retrolambda:3.3.0'
   }
 }
 
@@ -22,6 +23,7 @@ ext {
   compileSdkVersion = 23
   buildToolsVersion = '23.0.1'
   javaVersion = JavaVersion.VERSION_1_7
+  java8Version = JavaVersion.VERSION_1_8
 }
 
 ext.deps = [
