--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
   repositories {
     mavenCentral()
+    jcenter()
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:2.2.0'
@@ -11,6 +12,7 @@ buildscript {
 allprojects {
   repositories {
     mavenCentral()
+    jcenter()
   }
 
   group = GROUP
