--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ language: android
 
 android:
   components:
-    - build-tools-23.0.1
-    - android-23
+    - tools
+    - platform-tools
+    - build-tools-23.0.3
+    - android-24
     - extra-android-m2repository
 
 jdk:
-  - oraclejdk7
   - oraclejdk8
 
 after_success:
