--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,17 @@
 buildscript {
   repositories {
     mavenCentral()
+    jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.3.1'
+    classpath 'com.android.tools.build:gradle:2.2.0'
   }
 }
 
 allprojects {
   repositories {
     mavenCentral()
+    jcenter()
   }
 
   group = GROUP
@@ -18,9 +20,9 @@ allprojects {
 
 ext {
   minSdkVersion = 9
-  targetSdkVersion = 23
-  compileSdkVersion = 23
-  buildToolsVersion = '23.0.1'
+  targetSdkVersion = 24
+  compileSdkVersion = 24
+  buildToolsVersion = '23.0.3'
   javaVersion = JavaVersion.VERSION_1_7
 }
 
