--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.2.0'
+    classpath 'com.android.tools.build:gradle:2.2.3'
     classpath 'me.tatarka:gradle-retrolambda:3.3.0'
   }
 }
@@ -23,18 +23,18 @@ ext {
   minSdkVersion = 9
   targetSdkVersion = 24
   compileSdkVersion = 24
-  buildToolsVersion = '23.0.3'
+  buildToolsVersion = '25.0.0'
   javaVersion = JavaVersion.VERSION_1_7
   java8Version = JavaVersion.VERSION_1_8
 }
 
 ext.deps = [
-    annotations: 'com.android.support:support-annotations:23.1.1',
-    rxjava: 'io.reactivex.rxjava2:rxjava:2.0.0-RC3',
-    rxandroid: 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1',
-    rxbinding: 'com.jakewharton.rxbinding:rxbinding:0.3.0',
-    rxjava2interop: 'com.github.akarnokd:rxjava2-interop:0.4.0',
-    butterknife: 'com.jakewharton:butterknife:7.0.1',
+    annotations: 'com.android.support:support-annotations:25.0.1',
+    rxjava: 'io.reactivex.rxjava2:rxjava:2.0.1',
+    rxandroid: 'io.reactivex.rxjava2:rxandroid:2.0.1',
+    rxbinding: 'com.jakewharton.rxbinding:rxbinding:1.0.0',
+    rxjava2interop: 'com.github.akarnokd:rxjava2-interop:0.8.1',
+    butterknife: 'com.jakewharton:butterknife:8.4.0',
     junit: 'junit:junit:4.12',
     assertj: 'org.assertj:assertj-core:1.7.0',
     robolectric: 'org.robolectric:robolectric:3.0',
