--- a/rx-preferences-sample/build.gradle
+++ b/rx-preferences-sample/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
@@ -35,4 +36,6 @@ dependencies {
   compile deps.rxbinding
   compile deps.rxjava2interop
   compile deps.butterknife
+
+  apt deps.butterknifeCompiler
 }
