--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,8 @@ ext {
 
 ext.deps = [
     annotations: 'com.android.support:support-annotations:23.1.1',
-    rxjava: 'io.reactivex.rxjava2:rxjava:2.0.0-RC3',
-    rxandroid: 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1',
+    rxjava: 'io.reactivex.rxjava2:rxjava:2.0.1',
+    rxandroid: 'io.reactivex.rxjava2:rxandroid:2.0.1',
     rxbinding: 'com.jakewharton.rxbinding:rxbinding:0.3.0',
     rxjava2interop: 'com.github.akarnokd:rxjava2-interop:0.4.0',
     butterknife: 'com.jakewharton:butterknife:7.0.1',
