--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ ext.deps = [
     rxandroid: 'io.reactivex.rxjava2:rxandroid:2.0.1',
     rxbinding: 'com.jakewharton.rxbinding:rxbinding:0.3.0',
     rxjava2interop: 'com.github.akarnokd:rxjava2-interop:0.4.0',
-    butterknife: 'com.jakewharton:butterknife:7.0.1',
+    butterknife: 'com.jakewharton:butterknife:8.4.0',
+    butterknifeCompiler: 'com.jakewharton:butterknife-compiler:8.4.0',
     junit: 'junit:junit:4.12',
     assertj: 'org.assertj:assertj-core:1.7.0',
     robolectric: 'org.robolectric:robolectric:3.0',
