Prepare for release 2.0.0-RC1.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-GROUP=com.f2prateek.rx.preferences
-VERSION_NAME=2.0.0-SNAPSHOT
+GROUP=com.f2prateek.rx.preferences2
+VERSION_NAME=2.0.0-RC1
 
 POM_DESCRIPTION=Reactive SharedPreferences for Android
 
