--- a/build.gradle
+++ b/build.gradle
@@ -29,14 +29,13 @@ ext {
 }
 
 ext.deps = [
-    annotations: 'com.android.support:support-annotations:25.1.1',
-    rxjava: 'io.reactivex.rxjava2:rxjava:2.0.3',
+    annotations: 'com.android.support:support-annotations:25.3.1',
+    rxjava: 'io.reactivex.rxjava2:rxjava:2.0.8',
     rxandroid: 'io.reactivex.rxjava2:rxandroid:2.0.1',
-    rxbinding: 'com.jakewharton.rxbinding:rxbinding:0.3.0',
-    rxjava2interop: 'com.github.akarnokd:rxjava2-interop:0.4.0',
-    butterknife: 'com.jakewharton:butterknife:8.4.0',
-    butterknifeCompiler: 'com.jakewharton:butterknife-compiler:8.4.0',
+    rxbinding: 'com.jakewharton.rxbinding2:rxbinding:2.0.0',
+    butterknife: 'com.jakewharton:butterknife:8.5.1',
+    butterknifeCompiler: 'com.jakewharton:butterknife-compiler:8.5.1',
     junit: 'junit:junit:4.12',
     assertj: 'org.assertj:assertj-core:1.7.0',
-    robolectric: 'org.robolectric:robolectric:3.0',
+    robolectric: 'org.robolectric:robolectric:3.3.2',
 ]
