Prepare next development version.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.f2prateek.rx.preferences2
-VERSION_NAME=2.0.0-RC3
+VERSION_NAME=2.0.0-SNAPSHOT
 
 POM_DESCRIPTION=Reactive SharedPreferences for Android
 
