Updated dependencies and removed unused imports. Use a consistent code formatting. Replaced the NonNull annotations with jsr305.

--- a/rx-preferences/build.gradle
+++ b/rx-preferences/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
   compile deps.annotations
   compile deps.rxjava
+  compile deps.jsr305
 
   testCompile deps.junit
   testCompile deps.assertj
