--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ allprojects {
 }
 
 ext {
-  minSdkVersion = 9
+  minSdkVersion = 14
   targetSdkVersion = 25
   compileSdkVersion = 25
   buildToolsVersion = '26.0.2'
@@ -43,13 +43,14 @@ ext {
 
 ext.deps = [
     annotations        : 'com.android.support:support-annotations:27.0.1',
-    rxjava             : 'io.reactivex.rxjava2:rxjava:2.1.6',
-    rxandroid          : 'io.reactivex.rxjava2:rxandroid:2.0.1',
-    rxbinding          : 'com.jakewharton.rxbinding:rxbinding:1.0.1',
-    rxjava2interop     : 'com.github.akarnokd:rxjava2-interop:0.11.0',
+    assertj            : 'org.assertj:assertj-core:1.7.0',
     butterknife        : 'com.jakewharton:butterknife:8.8.1',
     butterknifeCompiler: 'com.jakewharton:butterknife-compiler:8.8.1',
+    jsr305             : 'com.google.code.findbugs:jsr305:3.0.2',
     junit              : 'junit:junit:4.12',
-    assertj            : 'org.assertj:assertj-core:1.7.0',
     robolectric        : 'org.robolectric:robolectric:3.5.1',
+    rxandroid          : 'io.reactivex.rxjava2:rxandroid:2.0.1',
+    rxbinding          : 'com.jakewharton.rxbinding:rxbinding:1.0.1',
+    rxjava             : 'io.reactivex.rxjava2:rxjava:2.1.6',
+    rxjava2interop     : 'com.github.akarnokd:rxjava2-interop:0.11.0'
 ]
