--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@ POM_LICENCE_DIST=repo
 
 POM_DEVELOPER_ID=f2prateek
 POM_DEVELOPER_NAME=Prateek Srivastava
+android.useAndroidX=true
+android.enableJetifier=true
