--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-25.0.2
-    - android-25
+    - build-tools-28.0.3
+    - android-28
     - extra-android-m2repository
+  licenses:
+    - 'android-sdk-license-.+'
 
 jdk:
   - oraclejdk8
