--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
     ext {
+        buildToolsVersion = '28.0.3'
+        butterknifeVersion = '10.1.0'
+        compileSdkVersion = 28
+        java8Version = JavaVersion.VERSION_1_8
+        javaVersion = JavaVersion.VERSION_1_7
+        kotlinVersion = '1.3.21'
         minSdkVersion = 9
         targetSdkVersion = 28
-        compileSdkVersion = 28
-        buildToolsVersion = '28.0.3'
-        javaVersion = JavaVersion.VERSION_1_7
-        java8Version = JavaVersion.VERSION_1_8
-        butterknifeVersion = '10.1.0'
     }
 
     repositories {
@@ -18,6 +19,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "com.jakewharton:butterknife-gradle-plugin:${butterknifeVersion}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}"
     }
 }
 
@@ -42,14 +44,16 @@ allprojects {
 
 ext.deps = [
         annotations        : 'androidx.annotation:annotation:1.0.2',
-        rxjava2            : 'io.reactivex.rxjava2:rxjava:2.2.7',
-        rxandroid          : 'io.reactivex.rxjava2:rxandroid:2.1.1',
-        rxbinding          : 'com.jakewharton.rxbinding:rxbinding:1.0.1',
-        rxjava2interop     : 'com.github.akarnokd:rxjava2-interop:0.13.5',
+        assertj            : 'org.assertj:assertj-core:3.12.2',
         butterknife        : "com.jakewharton:butterknife:${ext.butterknifeVersion}",
         butterknifeCompiler: "com.jakewharton:butterknife-compiler:${ext.butterknifeVersion}",
         junit              : 'junit:junit:4.12',
-        assertj            : 'org.assertj:assertj-core:3.12.2',
+        kotlinStdlib       : "org.jetbrains.kotlin:kotlin-stdlib:${ext.kotlinVersion}",
+        kotlinReflect      : "org.jetbrains.kotlin:kotlin-reflect:${ext.kotlinVersion}",
         robolectric        : 'org.robolectric:robolectric:4.2.1',
+        rxandroid          : 'io.reactivex.rxjava2:rxandroid:2.1.1',
+        rxbinding          : 'com.jakewharton.rxbinding:rxbinding:1.0.1',
+        rxjava2            : 'io.reactivex.rxjava2:rxjava:2.2.7',
+        rxjava2interop     : 'com.github.akarnokd:rxjava2-interop:0.13.5',
         testcore           : 'androidx.test:core:1.0.0'
 ]
