--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,7 @@ ext.deps = [
         annotations        : 'androidx.annotation:annotation:1.0.2',
         rxjava2            : 'io.reactivex.rxjava2:rxjava:2.2.7',
         rxandroid          : 'io.reactivex.rxjava2:rxandroid:2.1.1',
-        rxbinding          : 'com.jakewharton.rxbinding:rxbinding:1.0.1',
-        rxjava2interop     : 'com.github.akarnokd:rxjava2-interop:0.13.5',
+        rxbinding          : 'com.jakewharton.rxbinding3:rxbinding:3.0.0',
         butterknife        : "com.jakewharton:butterknife:${ext.butterknifeVersion}",
         butterknifeCompiler: "com.jakewharton:butterknife-compiler:${ext.butterknifeVersion}",
         junit              : 'junit:junit:4.12',
