--- a/build.gradle
+++ b/build.gradle
@@ -42,10 +42,9 @@ allprojects {
 
 ext.deps = [
         annotations        : 'androidx.annotation:annotation:1.0.2',
-        rxjava2            : 'io.reactivex.rxjava2:rxjava:2.2.7',
-        rxandroid          : 'io.reactivex.rxjava2:rxandroid:2.1.1',
-        rxbinding          : 'com.jakewharton.rxbinding:rxbinding:1.0.1',
-        rxjava2interop     : 'com.github.akarnokd:rxjava2-interop:0.13.5',
+        rxjava3            : 'io.reactivex.rxjava3:rxjava:3.0.4',
+        rxandroid3         : 'io.reactivex.rxjava3:rxandroid:3.0.0',
+        rxbinding4         : 'com.jakewharton.rxbinding4:rxbinding:4.0.0',
         butterknife        : "com.jakewharton:butterknife:${ext.butterknifeVersion}",
         butterknifeCompiler: "com.jakewharton:butterknife-compiler:${ext.butterknifeVersion}",
         junit              : 'junit:junit:4.12',
