--- a/rx-preferences-sample/build.gradle
+++ b/rx-preferences-sample/build.gradle
@@ -31,9 +31,8 @@ android {
 
 dependencies {
   implementation project(':rx-preferences')
-  implementation deps.rxandroid
-  implementation deps.rxbinding
-  implementation deps.rxjava2interop
+  implementation deps.rxandroid3
+  implementation deps.rxbinding4
   implementation deps.butterknife
 
   annotationProcessor deps.butterknifeCompiler
