updated source comptibility to java 8

--- a/rx-preferences/build.gradle
+++ b/rx-preferences/build.gradle
@@ -4,8 +4,8 @@ android {
   compileSdkVersion rootProject.ext.compileSdkVersion
 
   compileOptions {
-    sourceCompatibility rootProject.ext.javaVersion
-    targetCompatibility rootProject.ext.javaVersion
+    sourceCompatibility rootProject.ext.java8Version
+    targetCompatibility rootProject.ext.java8Version
   }
 
   defaultConfig {
